k8s-rpi-apps-ingress/vw-ingress/vw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-shared
  annotations:
    service.cilium.io/global: "true"      
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
