k8s-rpi-apps-ingress/vw-ingress/vw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ext-shared
  annotations:
    avp.kubernetes.io/path: "k8secrets/externalroutes"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  ingressClassName: nginx-external
  rules:
    - host: <vwexternalhostname>
      http:
        paths:
        - path: ^<vwpathprefix>/(.*)
          pathType: Prefix
          backend:
            service:
              name: vaultwarden-shared
              port:
                number: 80
